# barbly

./: .gitignore  CHANGELOG.md  README.md  barbly.cabal  cbits.m  flake.nix
.github/workflows/: haskell.yml
scripts/: checkfd.sh  features.sh  github_issues.sh  json.sh  long.sh  pass.sh  random.sh
src/: AppKit.hs  Main.hs
