cabal-version:       >=1.10
name:                barbly
version:             0.1.0.0
synopsis:            Create status bar menus for macOS from executables
description:         Allows you to place the stdout of a process in the macOS status bar.
bug-reports:         https://github.com/luke-clifton/barbly
license:             BSD3
license-file:        LICENSE
author:              Luke Clifton
maintainer:          lukec@themk.net
copyright:           (c) 2019 Luke Clifton
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable barbly
  main-is:             Main.hs
  other-modules:       AppKit
  build-depends:       base >=4.12 && <4.13, shh, optparse-applicative, attoparsec, bytestring, async
  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           cbits.m
  frameworks:          AppKit
  ghc-options:         -threaded
